--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 <body>
 <div class="main">
 	<p>五子棋</p>
-	<p class="mb-35"><button id="new-btn">new game</button></p>
-	<div id="box">
-		
-	</div>	
+	<p class="mb-35"><button id="new-btn">再来一局</button></p>
+	<div id="box"><canvas id="chess" width="450" height="450"></canvas></div>	
 </div>
 
 
@@ -23,5 +21,6 @@
 
 
 <script type="text/javascript" src="js/mainGobang.js"></script>
+
 </body>
 </html>
